[package]
name = "substrate-archive"
version = "0.5.0-pre"
authors = ["Andrew Plaza <andrew.plaza@parity.io>"]
edition = "2018"

[dependencies]
# external
log = "0.4"
futures = { version = "0.3" }
fdlimit = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "0.6.1"
dirs = { version = "3", package = "directories" }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["postgres", "macros", "runtime-async-std", "migrate", "json"] }
async-trait = "0.1"
hex = "0.4"
itertools = "0.9"
# 0.7.2 introduces breaking changes with Send/Sync bounds
flume = "0.7"
parking_lot = "0.10"
parity-util-mem = "0.7"
hashbrown = { version = "0.8", features = ["inline-more"] }
thiserror = "1.0"
rayon = "1.4"
num_cpus = "1"
xtra = { version = "0.5.0-beta.4", features = ["with-smol-0_3"] }
# Just a simple wrapper around std::thread that `joins on drop`
jod-thread = "0.1.2"
smol = { version = "0.3" }
coil = { git = "https://github.com/insipx/coil", package = "coil"}
rmp-serde = "0.14.4"

# Optional
fern = { version = "0.6", features = ["colored"], optional = true }
chrono = { version = "0.4", optional = true }

# Parity
primitive-types = "0.7"
kvdb = "0.7"
kvdb-rocksdb = "0.9.1"
codec = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive", "full"] }
hash-db = "0.15"

# Substrate
sp-database = { git = "https://github.com/andor0/node", package="sp-database", branch = "substrate-archive-integration" }
sp-storage = { git = "https://github.com/andor0/node", package = "sp-storage", branch = "substrate-archive-integration" }
sp-externalities = { git = "https://github.com/andor0/node", package = "sp-externalities", branch = "substrate-archive-integration" }
sp-runtime = { git = "https://github.com/andor0/node", package = "sp-runtime", branch = "substrate-archive-integration" }
sc-client-api = { git = "https://github.com/andor0/node", package = "sc-client-api", branch = "substrate-archive-integration" }
sp-blockchain = { git = "https://github.com/andor0/node", package = "sp-blockchain", branch = "substrate-archive-integration" }
sp-core = { git = "https://github.com/andor0/node", package = "sp-core", branch = "substrate-archive-integration" }
sp-api = { git = "https://github.com/andor0/node", package = "sp-api", branch = "substrate-archive-integration" }
sp-block-builder = { git = "https://github.com/andor0/node", package = "sp-block-builder", branch = "substrate-archive-integration" }
sp-version = {  git = "https://github.com/andor0/node", package = "sp-version", branch = "substrate-archive-integration" }
sc-executor = { git = "https://github.com/andor0/node", package = "sc-executor", branch = "substrate-archive-integration" }
sc-chain-spec = { git = "https://github.com/andor0/node", package = "sc-chain-spec", branch = "substrate-archive-integration" }
sp-trie = { git = "https://github.com/andor0/node", package = "sp-trie", branch = "substrate-archive-integration" }
sp-state-machine = { git = "https://github.com/andor0/node", package = "sp-state-machine", branch = "substrate-archive-integration" }
sp-io = { git = "https://github.com/andor0/node", package = "sp-io", branch = "substrate-archive-integration" }
itoa = "0.4.6"
include_dir = "0.6.0"
tempfile = "3.1.0"
async-executor = "0.1.2"
arc-swap = "0.4.7"

[dev-dependencies]
# desub-extras = { path = "../desub/extras/", package="desub-extras", features = ["polkadot"] }
polkadot-service = { package = "polkadot-service", git = "https://github.com/insipx/polkadot", branch = "substrate-archive" }
pretty_env_logger = "0.4.0"
# used in tests for storing test data on disk
flate2 = "1.0"
bincode = "1.3"
tempfile = "3.1"
once_cell = "1.4.1"
dotenv = "0.15.0"

[features]
default = ["logging"]
logging = ["chrono", "fern"]
test_rocksdb = []
